# docker

./: .gitignore  CLAUDE.md  README.md  launch.json
devbox/: .gitconfig  .zshrc  Dockerfile  Makefile  compose.yml  devbox.yml
eleventy/: .eleventy.js  Dockerfile  README.md  compose.yml  package.json
eleventy/src/: index.njk
eleventy/src/_includes/: layout.njk
eleventy/src/css/: site.css
eleventy/src/posts/: getting-started.md
gh-runner-coordinator/: .env.example  docker-compose.yml
gh-runner-coordinator/cloudflared/: config.yml.example
gh-runner-coordinator/coordinator/: Dockerfile  pyproject.toml
gh-runner-coordinator/coordinator/app/: config.py  github_client.py  main.py  queue_manager.py  worker_manager.py
ghost/: .gitignore  Caddyfile  Makefile  SECURITY_REVIEW.md  auto-update.sh  check_route_drift.py  compose.yml  ghost.yml
ghost/tinybird/: Dockerfile  getTokens.sh  handleLogin.sh  tb-wrapper
healthloom/: Makefile  compose.yml
healthloom/site/: index.html
homebridge/: Makefile  compose.yml
llama-vision/: .gitignore  Dockerfile  Makefile  README.md  compose.yml  requirements.txt  test_api.py
llama-vision/app/: models.py  request_schema.json  response_schema.json  webhook.py
lumivault/: compose.yml
lumivault/site/: index.html
mastodon/: .env.example  Makefile  QUICKSTART.md  README.md  TESTING.md  compose.test.yml  compose.yml  health-check.sh  setup.sh  test-api.sh
ownpost/: compose.yml  docker-compose.yml
ownpost/site/: index.html
photovault/: Dockerfile  Makefile  README.md  config.toml.example  pyproject.toml
photovault/code/photovault/: __init__.py  b2_client.py  catalog.py  cli.py  config.py  external.py  hasher.py  models.py  redundancy.py
python/: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
python/code/hello/: hello.py
schwab-trading/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
schwab-trading/src/schwab_trader/: __init__.py  __main__.py  auth.py  config.py
sp500/: Dockerfile  Makefile  README.md  pyproject.toml
sp500/code/sp500/: rebalance.py
vcmi/: .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  compose.yml
verilator/: Dockerfile  Makefile  README.md
verilator/rtl/: counter.v
verilator/sim/: counter_tb.cpp  counter_tb.py
watchtower/: .env.example  compose.yml
